Add service for working with mongodb
