# cmd/ambulance-api-service/main.go
@@ -1,6 +1,7 @@
 package main
 
 import (
+	"context"
 	_ "embed"
 	"log"
 	"os"
@@ -9,6 +10,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/sevcikmichal/ambulance-webapi/api"
 	"github.com/sevcikmichal/ambulance-webapi/internal/ambulance_wl"
+	"github.com/sevcikmichal/ambulance-webapi/internal/db_service"
 )
 
 func main() {
@@ -21,8 +23,18 @@ func main() {
 	if !strings.EqualFold(environment, "production") { // case insensitive comparison
 		gin.SetMode(gin.DebugMode)
 	}
+
 	engine := gin.New()
 	engine.Use(gin.Recovery())
+
+	// setup context update  middleware
+	dbService := db_service.NewMongoService[ambulance_wl.Ambulance](db_service.MongoServiceConfig{})
+	defer dbService.Disconnect(context.Background())
+	engine.Use(func(ctx *gin.Context) {
+		ctx.Set("db_service", dbService)
+		ctx.Next()
+	})
+
 	// request routings
 	ambulance_wl.AddRoutes(engine)
 	engine.GET("/openapi", api.HandleOpenApi)
